bk_ida/sjengida/g0/main
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/main/src/sjeng.c:662:8: error: too many arguments to function call, expected 0, have 1
think( &v26); 
~~~~~  ^~~~
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/main/src/protos.h:63:1: note: 'think' declared here
move_s think (void);
^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/main/src/sjeng.c:819:8: error: too many arguments to function call, expected 0, have 1
think( &v26); 
~~~~~  ^~~~
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/main/src/protos.h:63:1: note: 'think' declared here
move_s think (void);
^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/main/src/sjeng.c:915:27: error: use of undeclared identifier 'off_4249EB'
else if ( !strcmp( input, off_4249EB) ) 
                          ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/main/src/sjeng.c:1142:8: error: too many arguments to function call, expected 0, have 1
think( &v26); 
~~~~~  ^~~~
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/main/src/protos.h:63:1: note: 'think' declared here
move_s think (void);
^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/main/src/obj/sjeng.o] Error 1
